<?xml version="1.0"?>
<package>
  <name>oaisys_client</name>
  <version>0.0.0</version>
  <description>Airsim client</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>oaisys_client_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>oaisys_client_ros</run_depend>
  <run_depend>voxblox_ros</run_depend>
  <run_depend>active_3d_planning_app_reconstruction</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
